<resources>
    <string name="app_name">Sun CMIS</string>
    <string name="txt_menu_search">Search</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete">Delete</string>
    <string name="edt_username">Username</string>
    <string name="edt_password">Password</string>
    <string name="txt_title_connection_err">No Connection</string>
    <string name="txt_try">Please try again</string>
    <string name="txt_btn_ok">OK</string>
    <string name="txt_title_login_fail">Incorrect Login</string>
    <string name="txt_login_fail">Please check user name and password</string>
    <string name="action_settings">Settings</string>
    <string name="txt_sample_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="txt_sample_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="age">Age</string>
    <string name="image_content_desc">Image</string>
    <string name="separator">|</string>
    <string name="delete">DELETE</string>
    <string name="contentDescription">ContentDescription</string>
    <string name="action_open_drawer">Open Drawer</string>
    <string name="action_close_drawer">Close Drawer</string>
    <string name="login">Log In</string>
    <string name="logout">Logout</string>
    <string name="uhc_patients">Patients</string>
    <string name="uhc_followup_patients">Follow Up Patients</string>
    <string name="uhc_reports">Reports</string>
    <string name="no_patients_yet">No Patients Yet</string>
    <string-array name="nav_item_activity_titles">
        <item>Patients</item>
        <item>Follow up Patients</item>
        <item>Reports</item>
        <item>Feedback</item>
        <item>Setting</item>
    </string-array>
    <string name="btn_save">SAVE</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string-array name="education">
        <item>-- Select Education --</item>
        <item>Primary School</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>College Degree</item>
        <item>Master</item>
        <item>Other</item>
    </string-array>
    <string-array name="gender">
        <item>-- Select Gender --</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="township">Township</string>
    <string name="state">State</string>
    <string name="religion">Religion</string>
    <string name="nationality">Nationality</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="qualification">Qualification</string>
    <string name="ex_qualification">Ex-Qualification</string>
    <string name="mobile_phone_number">Mobile Phone Number</string>
    <string name="home_phone_number">Home Phone Number</string>
    <string name="current_pass_code">Current Passcode</string>
    <string name="new_pass_code">New Passcode</string>
    <string name="confirm_new_pass_code">Confirm New Passcode</string>
    <string-array name="religions">
        <item>-- Select Religion --</item>
        <item>Buddhist</item>
        <item>Christian</item>
        <item>Islam</item>
        <item>Other</item>
    </string-array>
    <string-array name="pregnancy_status">
        <item>Not Pregnant</item>
        <item>Pregnant</item>
    </string-array>
    <string-array name="current">
        <item>none</item>
        <item>inj</item>
        <item>pills</item>
        <item>condom</item>
        <item>EC</item>
        <item>IUD</item>
        <item>IMP</item>
        <item>Sterilization</item>
        <item>traditional method</item>
    </string-array>
    <string-array name="marital_status">
        <item>-- Select Marital Status --</item>
        <item>Single</item>
        <item>Married</item>
    </string-array>
    <string name="edit">Edit</string>
    <string name="txt_no_patient">There is no patient in clinic.</string>
    <string name="txt_progress_history">Progress History</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="oops_failed_to_load_photo">Oops… Failed to load photo</string>
    <string name="reload">Reload</string>
    <string name="keep">Next</string>
    <string name="no_progress_kept_yet">No progress has been kept yet</string>
    <string name="no_progress_kept_yet_subtitle">Start keeping progress notes</string>
    <string name="btn_crop">Crop</string>
    <string name="retry">Retry</string>
    <string name="client_type">Client Type</string>
    <string name="uhc_new_patient">New clients</string>
    <string name="uhc_old_patient">Old clients</string>
    <string name="method">Method</string>
    <string name="inj">Inj</string>
    <string name="oc_pills">Oc Pills</string>
    <string name="condom">Condom</string>
    <string name="ec">EC</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="word">Word</string>
    <string name="value">Value</string>
    <string name="no_progress_history">No Progress History Yet!</string>
    <string name="uhc_form_rh_short_term">RH Short Term</string>
    <string name="uhc_form_rh_short_term_subtitle">Create or Edit RH Short Term Entry Form</string>
    <string name="msg_info_data_sync_progress">Syncing Data \n A few moments for preparing data</string>
    <string name="msg_err_data_sync_fail">Sync Failed \n Oops…Something went wrong! \n Please Try Again!</string>
    <string name="msg_info_data_sync_internet">Internet connection is required for syncing data. Please turn on Internet
        data or Wifi.
    </string>
    <string name="advance_search_text">Advanced Search</string>
    <string name="change_passcode">Change Passcode</string>
    <string name="msg_progress_complete">All type of progress notes created</string>
    <string name="manage_suggestions">Manage Suggestions</string>
    <string name="manage_suggestions_word_name">Word</string>
    <string name="manage_suggestions_word_value">Value</string>
    <string name="manage_suggestions_type">Type</string>
    <string name="manage_suggestions_delete">Delete</string>
    <string name="manage_suggestions_edit">Edit</string>
    <string name="manage_suggestions_empty_view">No Suggestions Created Yet</string>
    <string name="manage_suggestions_hint_enter_word">Enter suggestion word</string>
    <string name="manage_suggestions_hint_enter_value">Enter word value(s) (Comma Delimited)</string>
    <string name="manage_suggestions_delete_confirm">Are you sure to delete this suggestion?</string>
    <string name="manage_suggestions_delete_confirm_title">Delete Confirm</string>
    <string name="manage_suggestions_edit_suggestion">Edit Suggestion</string>
    <string name="manage_suggestions_save">Save</string>
    <string name="manage_suggestions_delete_fail">Failed to delete suggestion!</string>
    <string name="sync_data">Upload Patients\' Data</string>
    <string name="sync_download_data">Download Patients\' Data</string>
    <string name="data_sync_alert_msg">Please sync modified data frequently.</string>
    <string name="action_dev_settings">Dev Settings</string>
    <string name="dev_setting_password">Dev Settings Password</string>
    <string name="dev_setting_patient_data_export">Export Patient Data</string>
    <string name="dev_setting_suggestions_export">Export Suggestions</string>
    <string name="dev_setting_full_backup">Full Back Up</string>
    <string name="dev_setting_change_base_url">Change Base Url</string>
    <string name="dev_setting_default_url">Default Base Url</string>
    <string name="dev_setting_action_change">Change</string>
    <string name="hint_base_url">localhost:8080</string>
    <string name="feedback">Feedback</string>
    <string name="digit">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@#$*-=().,?!:;/\\ \' \" \n
    </string>
    <string name="dialog_title_clinic_data_req_failed">Clinic data request failed</string>
    <string name="dialog_msg_clinic_data_req_failed">Whoops! Didn\'t get link to clinic data. Please retry.</string>
    <string name="dialog_title_clinic_data_download_failed">Clinic data download failed</string>
    <string name="dialog_title_clinic_data_import_failed">Clinic data import failed</string>
    <string name="dialog_msg_clinic_data_download_failed">Something went wrong while downloading clinic data! Please
        retry!
    </string>
    <string-array name="immunizations">
        <item>Hepatitis (B) (at birth)</item>
        <item>BCG (at birth or 2 months old)</item>
        <item>PCV-1 (at 2 months)</item>
        <item>Penta-1 (at 2 months old)</item>
        <item>Polio-1 (drops) (at 2 months)</item>
        <item>Rotavirus-1 (at 2 months)</item>
        <item>PCV-2 (at 4 months)</item>
        <item>Penta-2 (at 4 months old)</item>
        <item>Polio (injection) (at 4 months)</item>
        <item>Polio-2 (drops) (at 4 months)</item>
        <item>Rotavirus-2 (at 4 months)</item>
        <item>PCV-3 (at 6 months)</item>
        <item>Penta-3 (at 6 months old)</item>
        <item>Polio-3 (drops) (at 6 months)</item>
        <item>Measles, Diphtheria (at 9 months)</item>
        <item>Japanese encephalitis (at 9 months)</item>
        <item>Measles, Diphtheria (at 18 months)</item>
    </string-array>
    <string-array name="risk_factors">
        <item>None</item>
        <item>Alcohol</item>
        <item>Betel Chewing</item>
        <item>HIV/STI Risk</item>
        <item>Malnourishment</item>
        <item>Physical Inactivity</item>
        <item>Smoking</item>
        <item>TB Contact Person</item>
        <item>Travelling to Malaria Endemic Area</item>
        <item>Tobacco Use</item>
        <item>Obese</item>
        <item>Underweight</item>
        <item>Other</item>
    </string-array>
    <string name="patientDetailLbl_uicCode">UIC Code</string>
    <string name="patientDetailLbl_weight">Weight</string>
    <string name="patientDetailLbl_height">Height</string>
    <string name="patientDetailLbl_bmi">BMI</string>
    <string name="patientDetailLbl_allergies">Known Allergies</string>
    <string name="patientDetailLbl_riskFactors">Risk Factors</string>
    <string name="feedback_lbl_general">General</string>
    <string name="feedback_lbl_bugs">Bug Report</string>
    <string name="feedback_hint_type_feedback">Type Feedback</string>
    <string name="patients_advance_search_lbl_name">Name</string>
    <string name="patients_advance_search_lbl_gender_both">Both</string>
    <string name="patients_advance_search_lbl_gender_male">Male</string>
    <string name="patients_advance_search_lbl_gender_female">Female</string>
    <string name="patients_advance_search_lbl_age_range_start">1</string>
    <string name="patients_advance_search_lbl_age_range_end">100</string>
    <string name="patients_advance_search_lbl_uid">UIC Code</string>
    <string name="patients_advance_search_lbl_phone">Phone Number</string>
    <string name="patients_advance_search_lbl_hh_code">HH Code</string>
    <string name="patients_advance_search_lbl_dob">DOB</string>
    <string name="patients_advance_search_lbl_reg_date">Registration Date</string>
    <string name="expand_all">Expand All</string>
    <string name="collapse_all">Collapse All</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="expand_groups">Expand Groups</string>
    <string name="collapse_groups">Collapse Groups</string>
    <string name="expand_selections">Expand Selected Terms</string>
    <string name="show_selections">Show Selections</string>
</resources>