<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image_content_desc"
            android:src="@mipmap/no_progress"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/no_progress_kept_yet"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_size_ex_large"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/no_progress_kept_yet_subtitle"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_size_normal"/>

</LinearLayout>