<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_discussion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_default_bg_color"
        tools:context="com.koekoetech.clinic.activities.SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_default_bg_color"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/custom_btn_background"
                android:text="@string/txt_menu_search"
                android:textColor="@color/color_white"/>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/btn_search">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                    <requestFocus/>

                </FrameLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:labelFor="@id/edt_search_name"
                        android:text="@string/patients_advance_search_lbl_name"
                        android:textSize="@dimen/txt_size_normal"/>

                <EditText
                        android:id="@+id/edt_search_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_out_diagnosis"
                        android:inputType="text"
                        android:lines="1"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/gender"
                        android:textSize="@dimen/txt_size_normal"/>

                <com.koekoetech.clinic.view.SegmentedGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:sc_border_width="1dp"
                        app:sc_checked_text_color="#ffffff"
                        app:sc_corner_radius="10dp"
                        app:sc_tint_color="#2196f3">

                    <RadioButton
                            android:id="@+id/patient_search_radioBoth"
                            style="@style/RadioButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/patients_advance_search_lbl_gender_both"/>

                    <RadioButton
                            android:id="@+id/patient_search_radioMale"
                            style="@style/RadioButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/patients_advance_search_lbl_gender_male"/>

                    <RadioButton
                            android:id="@+id/patient_search_radioFemale"
                            style="@style/RadioButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/patients_advance_search_lbl_gender_female"/>

                </com.koekoetech.clinic.view.SegmentedGroup>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/age"
                        android:textSize="@dimen/txt_size_normal"/>

                <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                        android:id="@+id/rangeSeekbarAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:bar_color="@color/secondary_text"
                        app:bar_highlight_color="@color/colorPrimary"
                        app:corner_radius="10"
                        app:data_type="_integer"
                        app:left_thumb_color="@color/colorPrimary"
                        app:left_thumb_color_pressed="@color/colorPrimaryDark"
                        app:max_value="100"
                        app:min_value="1"
                        app:right_thumb_color="@color/colorPrimary"
                        app:right_thumb_color_pressed="@color/colorPrimaryDark"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="0dp"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp">

                    <TextView
                            android:id="@+id/tv_min"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/patients_advance_search_lbl_age_range_start"/>

                    <TextView
                            android:id="@+id/tv_max"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="@string/patients_advance_search_lbl_age_range_end"/>

                </LinearLayout>

                <TextView
                        android:id="@+id/search_tv_lbl_uhc_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:labelFor="@id/edt_search_UID"
                        android:text="@string/patients_advance_search_lbl_uid"
                        android:textSize="@dimen/txt_size_normal"/>

                <RelativeLayout
                        android:id="@+id/search_uic_code_scan_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/btn_scan_barcode"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/barcode"
                            tools:ignore="ContentDescription"/>

                    <EditText
                            android:id="@+id/edt_search_UID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="8dp"
                            android:layout_toStartOf="@id/btn_scan_barcode"
                            android:background="@drawable/edt_out_diagnosis"
                            android:inputType="text"
                            android:lines="1"/>

                </RelativeLayout>

                <TextView
                        android:id="@+id/search_tv_lbl_hh_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:labelFor="@id/edt_search_hhCode"
                        android:text="@string/patients_advance_search_lbl_hh_code"
                        android:textSize="@dimen/txt_size_normal"/>

                <EditText
                        android:id="@+id/edt_search_hhCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/edt_out_diagnosis"
                        android:inputType="phone"
                        android:lines="1"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:labelFor="@id/edt_search_phone"
                        android:text="@string/patients_advance_search_lbl_phone"
                        android:textSize="@dimen/txt_size_normal"/>

                <EditText
                        android:id="@+id/edt_search_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_out_diagnosis"
                        android:inputType="phone"
                        android:lines="1"/>

                <TextView
                        android:id="@+id/tv_search_dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:labelFor="@id/edt_search_dob"
                        android:text="@string/patients_advance_search_lbl_dob"
                        android:textSize="@dimen/txt_size_normal"/>

                <EditText
                        android:id="@+id/edt_search_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/edt_out_diagnosis"
                        android:focusable="false"
                        android:inputType="date"
                        android:lines="1"/>

                <TextView
                        android:id="@+id/tv_search_reg_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="16dp"
                        android:labelFor="@id/edt_search_reg_date"
                        android:text="@string/patients_advance_search_lbl_reg_date"
                        android:textSize="@dimen/txt_size_normal"/>

                <EditText
                        android:id="@+id/edt_search_reg_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/edt_out_diagnosis"
                        android:focusable="false"
                        android:inputType="date"
                        android:lines="1"/>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>